------------------------------------------------------------------------------

                  What's new in each version of Interchange
                       (since the version 5.4 branch)

------------------------------------------------------------------------------


Interchange 5.5.1 released on YYYY-MM-DD.

UserTag
-------

* [save-cart] keeps cart if userdb returns with an error. 

* [formel] calls [display] on unknown types.