@@ -8,6 +8,13 @@
 
 Interchange 5.5.1 released on YYYY-MM-DD.
 
+Core
+----
+
+* Fix UserDB login issues within embedded Perl by using
+  Vend::Util::string_to_ref for deserialization of carts and other 
+  hashes.  
+
 UserTag
 -------
 
